add Post and Post Category
get absolute url  method , ListView

--- a/templates/news.html
+++ b/templates/news.html
@@ -6,19 +6,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- //for-mobile-apps -->
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" href="css/faqstyle.css" type="text/css" media="all" />
 <link href="css/single.css" rel='stylesheet' type='text/css' />
 <link rel="stylesheet" href="css/contactstyle.css" type="text/css" media="all" />
 <!-- news-css -->
-<link rel="stylesheet" href="news-css/news.css" type="text/css" media="all" />
+<link rel="stylesheet" href="/static/news-css/news.css" type="text/css" media="all" />
 <!-- //news-css -->
 <!-- list-css -->
-<link rel="stylesheet" href="list-css/list.css" type="text/css" media="all" />
+<link rel="stylesheet" href="/static/list-css/list.css" type="text/css" media="all" />
 <!-- //list-css -->
 <!-- font-awesome icons -->
-<link rel="stylesheet" href="css/font-awesome.min.css" />
+<link rel="stylesheet" href="/static/css/font-awesome.min.css" />
 <!-- //font-awesome icons -->
 <!-- js -->
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
@@ -245,34 +245,7 @@
 								<div id="myTabContent" class="tab-content">
 									<div role="tabpanel" class="tab-pane fade in active" id="home1" aria-labelledby="home1-tab">
 										<div class="wthree-news-top-left">
-											<div class="col-md-6 w3-agileits-news-left">
-												<div class="col-sm-5 wthree-news-img">
-													<a href="news-single.html"><img src="images/m1.jpg" alt="" /></a>
-												</div>
-												<div class="col-sm-7 wthree-news-info">
-													<h5><a href="news-single.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></h5>
-													<p>Sed tristique mattis fermentum. Etiam semper aliquet massa, id tempus massa mattis eget.</p>
-													<ul>
-														<li><i class="fa fa-clock-o" aria-hidden="true"></i> 24/09/2016</li>
-														<li><i class="fa fa-eye" aria-hidden="true"></i> 2642</li>
-													</ul>
-												</div>
-												<div class="clearfix"> </div>
-											</div>
-											<div class="col-md-6 w3-agileits-news-left">
-												<div class="col-sm-5 wthree-news-img">
-													<a href="news-single.html"><img src="images/m2.jpg" alt="" /></a>
-												</div>
-												<div class="col-sm-7 wthree-news-info">
-													<h5><a href="news-single.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></h5>
-													<p>Sed tristique mattis fermentum. Etiam semper aliquet massa, id tempus massa mattis eget.</p>
-													<ul>
-														<li><i class="fa fa-clock-o" aria-hidden="true"></i> 24/09/2016</li>
-														<li><i class="fa fa-eye" aria-hidden="true"></i> 2642</li>
-													</ul>
-												</div>
-												<div class="clearfix"> </div>
-											</div>
+								
 											<div class="clearfix"> </div>
 										</div>
 										<div class="wthree-news-top-left">
