--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -264,7 +264,7 @@
 						<a href="icons.html">Icons</a>
 					</li>
 					<li>
-						<a href="contact.html">Contact Us</a>
+						<a href="{% url "movie:contact" %}">Contact Us</a>
 					</li>
 				</ul>
 			</div>
