--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -12,7 +12,7 @@
 								<h3>Create an account</h3>
 								<div class="mt-3">
 									 <div class="cta">
-									 	<a href="#" class="btn btn-primary">Google orqali o'tish</a>
+									 	<a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-primary">Google orqali o'tish</a>
 									 </div>
 								</div>
 									<form action="" method="POST" class="form">
