--- a/templates/wrapper.html
+++ b/templates/wrapper.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>One Movies | Home</title>
+
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -65,8 +66,8 @@
 				<a href="index.html"><h1>One<span>Movies</span></h1></a>
 			</div>
 			<div class="w3_search">
-				<form action="#" method="post">
-					<input type="text" name="Search" placeholder="Search" required="">
+				<form action="{% url 'movie:search' %}" method="get">
+					<input type="text" name="search" placeholder="Qidiruv" required="">
 					<input type="submit" value="Go">
 				</form>
 			</div>
